CMake: simplify C++11 support, and allow to specify another standard
If macOS users still need to specify -stdlib=libc++ today,
then I will be disappointed.

The logic is stolen from a similar patch I made to google/cctz.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -7,21 +7,23 @@ set(CMAKE_MODULE_PATH
   ${PROJECT_SOURCE_DIR}/cmake/modules
   ${CMAKE_MODULE_PATH})
 
-include(utils)
-
 include(CTest)
 
-check_cxx11_options()
-
-if (CXX11_COMPILE_OPTIONS)
-  add_compile_options(${CXX11_COMPILE_OPTIONS})
-endif()
-
-foreach (link_option ${CXX11_LINK_OPTIONS})
-  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${link_option}")
-  set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${link_option}")
-  set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} ${link_option}")
-endforeach()
+# Starting from CMake >= 3.1, if a specific standard is required,
+# it can be set from the command line with:
+#     cmake -DCMAKE_CXX_STANDARD=[11|14|17]
+function(irony_target_set_cxx_standard target)
+  set(cxx_standard 11)
+  if (CMAKE_VERSION VERSION_LESS "3.1")
+    if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+      target_compile_options(${target} PRIVATE -std=c++${cxx_standard})
+    endif()
+  elseif (CMAKE_VERSION VERSION_LESS "3.8")
+    set_property(TARGET ${target} PROPERTY CXX_STANDARD ${cxx_standard})
+  else()
+    target_compile_features(${target} PUBLIC cxx_std_${cxx_standard})
+  endif()
+endfunction()
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
