fix ClangConfig.cmake target without header search path, bump CMake >= 3
CMake bump is necessary to support irony_libclang INTERFACE library.

Fixes #530

--- a/server/src/CMakeLists.txt
+++ b/server/src/CMakeLists.txt
@@ -1,16 +1,20 @@
 # XXX: if there are issues
 # due to https://reviews.llvm.org/D30911 / SVN Revision 298424
 # then use the fallback when LLVM_VERSION VERSION_LESS 5.0.1
-#
-# XXX: at least since Clang 8.0.0
-# it's looks like the 'libclang' IMPORTED target
-# does not specify the following target property:
-#     INTERFACE_INCLUDE_DIRECTORIES ${CLANG_INCLUDE_DIRS}
-# if it is an issue when Clang is installed in a non-standard location,
-# this may need a workaround and an upstream patch
 find_package(Clang)
 
 if (Clang_FOUND)
+  # XXX: at least since Clang 8.0.0
+  # it's looks like the 'libclang' IMPORTED target
+  # does not specify the following target property:
+  #     INTERFACE_INCLUDE_DIRECTORIES ${CLANG_INCLUDE_DIRS}
+  # which is confirmed by https://github.com/Sarcasm/irony-mode/issues/530
+  # so we work around this,
+  # but ideally Clang upstream should export fully usable IMPORTED targets
+  add_library(irony_libclang INTERFACE)
+  target_link_libraries(irony_libclang INTERFACE libclang)
+  target_include_directories(irony_libclang INTERFACE ${CLANG_INCLUDE_DIRS})
+
   get_property(IRONY_CLANG_EXECUTABLE TARGET clang PROPERTY LOCATION)
   execute_process(
     COMMAND "${IRONY_CLANG_EXECUTABLE}" -print-resource-dir
@@ -99,7 +103,7 @@ if (CLANG_RESOURCE_DIR)
     COMPILE_DEFINITIONS CLANG_RESOURCE_DIR=\"${CLANG_RESOURCE_DIR}\")
 endif()
 
-target_link_libraries(irony-server libclang)
+target_link_libraries(irony-server irony_libclang)
 
 set_target_properties(irony-server
   PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
